--- a/Android/Properties/AndroidManifest.xml
+++ b/Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="ThatConfXamarin.Android">
 	<uses-sdk />
-	<application android:label="That Conf"></application>
+	<application android:label="That Conf" android:icon="@drawable/icon"></application>
 </manifest>
