--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -6,7 +6,7 @@
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <ProjectGuid>{8DB2323E-F8F6-4E16-B548-CF477111747D}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>ThatConfXamarin</RootNamespace>
+    <RootNamespace>Core</RootNamespace>
     <AssemblyName>ThatConfXamarin</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Profile78</TargetFrameworkProfile>
